--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background: rgb(0,43,111);
+    background: linear-gradient(90deg, rgba(0,43,111,1) 11%, rgba(34,0,255,0.9304096638655462) 33%, rgba(0,18,255,1) 53%, rgba(0,142,255,1) 82%);
+}
