review psn-storage

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,25 @@
 <div class="home__container">
-    <app-card></app-card>
-    <app-card></app-card>
-    <app-card></app-card>
-    <app-card></app-card>
-    <app-card></app-card>
-    <app-card></app-card>
-    <app-card></app-card>
+    <app-card gameCover="assets/bt-1.jpg" gameLabel="Cross Buy" gamePrice="$ 76.99" gameTitle="Buy Now!"
+        gameType="DISC | PS3 | PS4">
+    </app-card>
+
+    <app-card gameCover="assets/bt-4.jpg" gameLabel="Cross Buy" gamePrice="$ 140.99" gameTitle="Buy Now!"
+        gameType="Full Game | PS4 | PS5">
+    </app-card>
+
+    <app-card gameCover="assets/bt-5.jpg" gameLabel="Cross Buy" gamePrice="$ 200.00" gameTitle="Buy Now!"
+        gameType="Digital | PS4 | PS5">
+    </app-card>
+
+    <app-card gameCover="assets/bt-bad-company-2.jpg" gameLabel="Black Friday" gamePrice="$ 40.99"
+        gameTitle="Play It Now!" gameType="Digital | PS3 | PS4 | PS Vita">
+    </app-card>
+
+    <app-card gameCover="assets/bt-hardline.jpg" gameLabel="Cross Buy" gamePrice="$ 45.99" gameTitle="Play It Now!"
+        gameType="Digital | PS3 | PS4 | PS Vita">
+    </app-card>
+
+    <app-card gameCover="assets/ac-cover.jpg" gameLabel="EXCLUSIVE" gamePrice="$ 95.50" gameTitle="Buy Now!"
+        gameType="Full Game | PS3 | PS4">
+    </app-card>
 </div>
