--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -1,10 +1,26 @@
 .card__container {
-    border: 2px solid #000;
-    margin: 70px auto;
-    height: 600px;
-    width: 400px;
+    border: 3px solid #2c2c2c;
+    position: relative;
+    border-radius: 10px;
+    margin-top: 70px;
+    height: 500px;
+    width: 350px;
+    display: flex;
+    overflow: hidden;
+    transition: ease-in-out 0.7s;
 }
 
-.card__content {
-    height: 100%;
+.card__img {
+    min-width: 100%;
+    min-height: 100%;
+    transition: transform 0.8s;
+}
+
+.card__img:hover {
+    transform: scale(1.1);
+}
+
+.card__container:hover {
+    border: 3px solid #e2e2e2;
+    box-shadow: 0px 0px 10px 1px #000;
 }
