--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,5 +1,8 @@
-<div class="card__container">
-    <div class="card__content">
-        <img src="../../../assets/bt-1.jpg" width="100%" height="100%" alt="">
-    </div>
-</div>
+<a href="#" class="card__container">
+    <img [src]=[gameCover] class="card__img" alt="card">
+    <app-card-label gameLabel="{{gameLabel}}">
+    </app-card-label>
+
+    <app-card-price gamePrice="{{gamePrice}}" gameTitle="{{gameTitle}}" gameType="{{gameType}}">
+    </app-card-price>
+</a>
