review psn-storage

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,4 +1,4 @@
-<a href="#" class="card__container">
+<a href="https://store.playstation.com/pt-br/" class="card__container">
     <img [src]=[gameCover] class="card__img" alt="card">
     <app-card-label gameLabel="{{gameLabel}}">
     </app-card-label>
