--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,13 +1,13 @@
 <div class="home__container">
-    <app-card gameCover="assets/bt-1.jpg" gameLabel="Cross Buy" gamePrice="$ 76.99" gameTitle="Buy Now!"
+    <app-card gameCover="assets/bt-1.jpg" gameLabel="Cross Buy" gamePrice="$ 78.99" gameTitle="Buy Now!"
         gameType="DISC | PS3 | PS4">
     </app-card>
 
-    <app-card gameCover="assets/bt-4.jpg" gameLabel="Cross Buy" gamePrice="$ 140.99" gameTitle="Buy Now!"
+    <app-card gameCover="assets/bt-4.jpg" gameLabel="Cross Buy" gamePrice="$ 99.50" gameTitle="Buy Now!"
         gameType="Full Game | PS4 | PS5">
     </app-card>
 
-    <app-card gameCover="assets/bt-5.jpg" gameLabel="Cross Buy" gamePrice="$ 200.00" gameTitle="Buy Now!"
+    <app-card gameCover="assets/bt-5.jpg" gameLabel="Cross Buy" gamePrice="$ 198.99" gameTitle="Buy Now!"
         gameType="Digital | PS4 | PS5">
     </app-card>
 
@@ -19,7 +19,27 @@
         gameType="Digital | PS3 | PS4 | PS Vita">
     </app-card>
 
-    <app-card gameCover="assets/ac-cover.jpg" gameLabel="EXCLUSIVE" gamePrice="$ 95.50" gameTitle="Buy Now!"
+    <app-card gameCover="assets/ac-cover.jpg" gameLabel="Remastered" gamePrice="$ 59.00" gameTitle="Buy Now!"
         gameType="Full Game | PS3 | PS4">
+    </app-card>
+
+    <app-card gameCover="assets/ac-brotherhood.webp" gameLabel="Remastered" gamePrice="$ 95.50" gameTitle="Buy Now!"
+        gameType="DISC | PS3 | PS4">
+    </app-card>
+
+    <app-card gameCover="assets/god-of-war.jpg" gameLabel="Game of the Year" gamePrice="$ 99.50" gameTitle="Play It Now!"
+        gameType="Digital | PS4 | PS5 | PC">
+    </app-card>
+
+    <app-card gameCover="assets/horizon.webp" gameLabel="New Generation" gamePrice="$ 99.50" gameTitle="Play It Now!"
+        gameType="Digital | PS4 | PS5 | PC">
+    </app-card>
+
+    <app-card gameCover="assets/TLOFUS.webp" gameLabel="Game of the Year" gamePrice="$ 199.50" gameTitle="Play It Now!"
+        gameType="Digital | PS4 | PS5 | PC">
+    </app-card>
+
+    <app-card gameCover="assets/EGS_RatchetClank.jpg" gameLabel="New Generation" gamePrice="$ 349.90" gameTitle="Play It Now!"
+        gameType="Digital | PS4 | PS5 | PC">
     </app-card>
 </div>
