--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -3,6 +3,7 @@
     position: relative;
     border-radius: 10px;
     margin-top: 70px;
+    margin-bottom: 5px;
     height: 500px;
     width: 350px;
     display: flex;
