--- a/src/app/components/card/card-price/card-price.component.css
+++ b/src/app/components/card/card-price/card-price.component.css
@@ -8,7 +8,7 @@
     font-family: calibri;
     display: flex;
     justify-content: space-between;
-    align-items: end;
+    align-items: flex-end;
     color: #ffffffbb;
 }
 
